fixed word break on main feed

--- a/react-app/src/components/Dashboard/Feed/FeedPost/ViewComments.css
+++ b/react-app/src/components/Dashboard/Feed/FeedPost/ViewComments.css
@@ -24,6 +24,12 @@
 .comment2{
     display:flex;
     font-size:14px;
+    white-space:normal;
+}
+
+.comment1-div,
+.comment2-div{
+    word-break:break-word;
 }
 
 .comment1 a,
